--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,25 @@
 %html
-  %h1= @useragent
-  %ul
-    - @useragents.reverse.each do |useragent|
-      %li= useragent
-  %a{href: 'https://github.com/jakspalding/ualist'} What is this?
+  %head
+    :css
+      * {
+        font-family: 'Lucida Grande';
+        -webkit-font-smoothing: antialiased;
+        color: rgb(51, 51, 51);
+      }
+      h1, ul li {
+        font-size: 16px;
+      }
+      a {
+        color: rgb(0, 136, 204);
+        text-decoration: none;
+        font-size: 13px;
+      }
+      a:hover, a:focus, a:active {
+        text-decoration: underline;
+      }
+  %body
+    %h1= @useragent
+    %ul
+      - @useragents.reverse.each do |useragent|
+        %li= useragent
+    %a{href: 'https://github.com/jakspalding/ualist'} What is this?
