--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html
   %head
+    %title=Useragent Logger
     %link{href: 'http://fonts.googleapis.com/css?family=Lato:400,700', rel: 'stylesheet', type: 'text/css'}
     :css
       h1, li, a {
