--- a/views/index.haml
+++ b/views/index.haml
@@ -32,3 +32,10 @@
       - @useragents.each do |useragent|
         %li= useragent.useragent
     %a{class: 'info', href: 'https://github.com/jakspalding/ualist'} What is this?
+  %script
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-40343416-3', 'jak.io');
+    ga('send', 'pageview');
